// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should format cte-1: pretty/cte-1.sql (non-pretty) 1`] = `"WITH regional_sales AS (SELECT region, sum(sales_amount) AS total_sales FROM sales GROUP BY region) SELECT * FROM regional_sales"`;

exports[`should format cte-1: pretty/cte-1.sql (pretty) 1`] = `
"WITH 
  regional_sales AS (SELECT
    region,
    sum(sales_amount) AS total_sales
  FROM sales
  GROUP BY
    region)
SELECT *
FROM regional_sales"
`;

exports[`should format cte-2: pretty/cte-2.sql (non-pretty) 1`] = `"WITH regional_sales AS (SELECT region, sum(sales_amount) AS total_sales FROM sales GROUP BY region), top_regions AS (SELECT region FROM regional_sales WHERE total_sales > 1000000) SELECT * FROM top_regions"`;

exports[`should format cte-2: pretty/cte-2.sql (pretty) 1`] = `
"WITH 
  regional_sales AS (SELECT
    region,
    sum(sales_amount) AS total_sales
  FROM sales
  GROUP BY
    region),
  top_regions AS (SELECT region
  FROM regional_sales
  WHERE
    total_sales > 1000000)
SELECT *
FROM top_regions"
`;

exports[`should format cte-3: pretty/cte-3.sql (non-pretty) 1`] = `"WITH RECURSIVE employee_hierarchy AS (SELECT id, name, manager_id, 1 AS level FROM employees WHERE manager_id IS NULL UNION ALL SELECT e.id, e.name, e.manager_id, eh.level + 1 FROM employees AS e JOIN employee_hierarchy AS eh ON e.manager_id = eh.id) SELECT * FROM employee_hierarchy"`;

exports[`should format cte-3: pretty/cte-3.sql (pretty) 1`] = `
"WITH RECURSIVE 
  employee_hierarchy AS (SELECT
    id,
    name,
    manager_id,
    1 AS level
  FROM employees
  WHERE
    manager_id IS NULL
  UNION
  ALL
  SELECT
    e.id,
    e.name,
    e.manager_id,
    eh.level + 1
  FROM employees AS e
  JOIN employee_hierarchy AS eh ON e.manager_id = eh.id)
SELECT *
FROM employee_hierarchy"
`;

exports[`should format cte-4: pretty/cte-4.sql (non-pretty) 1`] = `"WITH sales_summary AS (SELECT region, product_category, sum(amount) AS total FROM sales GROUP BY region, product_category), regional_totals AS (SELECT region, sum(total) AS region_total FROM sales_summary GROUP BY region) SELECT s.region, s.product_category, s.total, r.region_total FROM sales_summary AS s JOIN regional_totals AS r ON s.region = r.region"`;

exports[`should format cte-4: pretty/cte-4.sql (pretty) 1`] = `
"WITH 
  sales_summary AS (SELECT
    region,
    product_category,
    sum(amount) AS total
  FROM sales
  GROUP BY
    region,
    product_category),
  regional_totals AS (SELECT
    region,
    sum(total) AS region_total
  FROM sales_summary
  GROUP BY
    region)
SELECT
  s.region,
  s.product_category,
  s.total,
  r.region_total
FROM sales_summary AS s
JOIN regional_totals AS r ON s.region = r.region"
`;
